--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="assets/js/parlmpar.js"></script>
+    <script src="assets/js/numAscendente.js"></script>
 </body>
 </html>
