--- a/Trabajo_Practico_2/index.html
+++ b/Trabajo_Practico_2/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Trabajo Practico 2</title>
 </head>
 <body>
-    <script src="assets/Js/tiendaDescuento.js"></script>
+    <script src="assets/Js/notaPromedio.js"></script>
 </body>
 </html>
