Se termino el trabajo practico 2

--- a/Trabajo_Practico_2/index.html
+++ b/Trabajo_Practico_2/index.html
@@ -6,6 +6,6 @@
     <title>Trabajo Practico 2</title>
 </head>
 <body>
-    <script src="assets/Js/notaPromedio.js"></script>
+    <script src="assets/Js/tiendaDescuento.js"></script>
 </body>
 </html>
